TouchListener fait par le prof View

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,11 @@
     tools:context=".MainActivity">
 
     <androidStudio.TP2.View.View
+        android:id="@+id/ViewXML"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
     </androidStudio.TP2.View.View>
 
